# opposing-counsel-simulator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260413_0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  demo.py  documents.py  health.py  personas.py  runs.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  base.py  document.py  persona.py  run.py
apps/api/app/llm/: provider.py  types.py
apps/api/app/schemas/: common.py  demo.py  document.py  health.py  persona.py  run.py
apps/api/app/services/: classification.py  critique.py  demo.py  diffing.py  extraction.py  ingestion.py  orchestration.py  parsing.py  personas.py  retrieval.py  scoring.py  simulation.py  storage.py
apps/api/app/tasks/: negotiation.py
apps/api/app/utils/: demo_happy_path.py  prompt_loader.py  seed_data.py  text.py
apps/api/app/workers/: celery_app.py
apps/api/tests/: conftest.py  test_demo_artifact.py  test_parsing.py  test_workflow_services.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/lib/: api.ts  demo-data.ts  (+4 more)
docs/: api.md  architecture.md  data-model.md  prompting.md
infrastructure/docker/: api.Dockerfile  web.Dockerfile
(+8 files in other folders)
